<resources>
    <string name="app_name">primerApp2101</string>
    <string name="hola_mundo">Hola mundo</string>
    <string name="button">Button</string>
    <string name="calculadora">CALCULADORA</string>
    <string name="suma">+</string>
    <string name="borrar">Borrar</string>
    <string name="resta">-</string>
    <string name="multi">x</string>
    <string name="div">/</string>
    <string name="result">=</string>
    <string name="nueve">Button</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_2">2</string>
    <string name="slash">/</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_1">1</string>
    <string name="operaci_n">Operación</string>
    <string name="_0">0</string>
    <string name="_7">7</string>
    <string name="el"><![CDATA[<]]></string>
    <string name="punto">.</string>
</resources>